--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -15,8 +15,8 @@
 # Font family for all text in the app, except code blocks
 # Accepted values (serif | sans serif | monospace)
 # Default: "sans serif"
-#font = "sans serif"
-font = "monospace"
+font = "sans serif"
+#font = "monospace"
 
 [server]
 enableStaticServing = true
